--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "cors": "^2.8.5",
     "rxjs": "~7.5.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
