--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@ngneat/until-destroy": "^8.1.4",
     "cors": "^2.8.5",
     "ngx-cookie-service": "^14.0.1",
     "rxjs": "~7.5.0",
